Asset_Tracker/force-app/main/default/objects/Seller_Information__c/Seller_Information__c.object-meta.xml
<CustomObject>
    <label>Seller Information</label>
    <nameField>
        <label>Seller Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sellers Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>