Asset_Tracker/force-app/main/default/objects/Seller_Information__c/fields/Seller_Address__c.field-meta.xml
<CustomField>
    <fullName>Seller_Address__c</fullName>
    <label>Seller Address</label>
    <type>TextArea</type>
</CustomField>