Asset_Tracker/force-app/main/default/objects/Seller_Information__c/fields/Seller_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Seller_Email_Id__c</fullName>
    <label>Seller Email Id</label>
    <required>true</required>
    <type>Email</type>
</CustomField>